examples/neg/parsing/extern-def-string.effekt
extern def foo(): Bool = whatever here